# fdShape

./: README.md  build.py  pyproject.toml
fdShape/: fdShape.py
src/: fdShape.py
src/fdShape/: encoder.c
